added onlineAnt function to utils (delete gpu tracking?)

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60cbdfc0-3fa8-4a5c-9e4e-06be50dc9db2",
+   "id": "10a91681-7e62-40a9-b6b8-8d641791d19b",
    "metadata": {},
    "source": [
     "# Case study: Sustainable Hardware Dimensioning\n",
@@ -27,13 +27,39 @@
     "\n",
     "## Dataset Collection\n",
     "\n",
-    "We built a training set based on grounding the two stochastic algorithms, i.e., anticipate and contingency [32, 4] from the energy management system domain. The two algorithms calculate the amount of energy that must be produced by the energy system to meet the required load, minimising the total energy cost over the daily time horizon and by taking into account the uncertainty. \n",
-    "\n",
+    "We built a training set based on grounding the two stochastic algorithms, i.e., anticipate and contingency [32, 4] from the energy management system domain. The two algorithms calculate the amount of energy that must be produced by the energy system to meet the required load, minimising the total energy cost over the daily time horizon and by taking into account the uncertainty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a6f2df48-e64c-463c-868c-be035158ad22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data exploration: look at the input data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b302f4f4-0472-48c8-b1b4-1c3e96faaecd",
+   "metadata": {},
+   "source": [
     "### Measuring Carbon Emissions\n",
     "\n",
-    "In order to extend HADA for taking into account sustainability, we need to measure the carbon emissions for running the algorithms during the benchmark phase. A simple tool to do so is codecarbon [https://mlco2.github.io/codecarbon/index.html], which is a python package offering useful tools for tracking the emissions resulting from executing code execution.\n",
+    "In order to extend HADA for taking into account sustainability, we need to measure the carbon emissions for running the algorithms during the benchmark phase. A simple tool to do so is [codecarbon](https://mlco2.github.io/codecarbon/index.html), which is a python package offering useful tools for tracking the emissions resulting from executing code execution.\n",
     "\n",
-    "In particular Codecarbon offers the class EmissionTracker, which can be wrapped around the code we would like to monitor."
+    "The CO2e emission tracking tool offered by codecarbon can be used in [different modalities](https://mlco2.github.io/codecarbon/usage.html): as an Explicit Object, as a Context Manager (recommended for monitoring a specific code block) or as a Decorator (recommended for monitoring training functions). To monitor the emissions for the execution of the ANTICIPATE and CONTINGENCY algorithms over a single instance, i created an explicit `EmissionTracker` and used the `start()` and `stop()` functions to respectively start and stop the tracking of the code section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "76ca68ef-3fb4-4cb1-971b-08ca46795d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tracking of the algorithms emissions"
    ]
   }
  ],
