--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4bd2dc3d-98f9-4c62-861e-e278f6d1e37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# Notebook setup: run this before everything\n",
+    "# ============================================================\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Control figure size\n",
+    "interactive_figures = False\n",
+    "if interactive_figures:\n",
+    "    # Normal behavior\n",
+    "    %matplotlib widget\n",
+    "    figsize=(9, 3)\n",
+    "else:\n",
+    "    # PDF export behavior\n",
+    "    figsize=(14, 5)\n",
+    "\n",
+    "#from matplotlib import pyplot as plt\n",
+    "from util import util\n",
+    "#from scipy.integrate import odeint\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "#from skopt.space import Space\n",
+    "#from eml.net.reader import keras_reader"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "10a91681-7e62-40a9-b6b8-8d641791d19b",
    "metadata": {},
