display input data

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "4bd2dc3d-98f9-4c62-861e-e278f6d1e37a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# Notebook setup: run this before everything\n",
@@ -60,17 +69,184 @@
     "\n",
     "## Dataset Collection\n",
     "\n",
-    "We built a training set based on grounding the two stochastic algorithms, i.e., anticipate and contingency [32, 4] from the energy management system domain. The two algorithms calculate the amount of energy that must be produced by the energy system to meet the required load, minimising the total energy cost over the daily time horizon and by taking into account the uncertainty."
+    "The training set was built based on grounding the two stochastic algorithms, i.e., anticipate and contingency [32, 4] from the energy management system domain. The two algorithms calculate the amount of energy that must be produced by the energy system to meet the required load, minimising the total energy cost over the daily time horizon and by taking into account the uncertainty. Both the algorithms divide the daily time horizon into 96 15-minutes time intervals.\n",
+    "\n",
+    "### Input data\n",
+    "\n",
+    "The input data is a set of 30 different instance realisations, each one representing one daily time horizon. For each day, we have **Load**, which is a 96-valued vector of the load observations sampled at each interval (every 15 minutes over the course of a day), and **PV**, a 96-valued vector representing the observations of available Photovoltaic energy production. Here we can see an example of the first two instances:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "a6f2df48-e64c-463c-868c-be035158ad22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_628f1_row0_col0, #T_628f1_row0_col1, #T_628f1_row1_col0, #T_628f1_row1_col1 {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_628f1\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_628f1_level0_col0\" class=\"col_heading level0 col0\" >PV(kW)</th>\n",
+       "      <th id=\"T_628f1_level0_col1\" class=\"col_heading level0 col1\" >Load(kW)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_628f1_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_628f1_row0_col0\" class=\"data row0 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "   0.    0.    0.   10.4  20.4  29.8  25.9  37.6  54.9  58.6 114.2 122.2\n",
+       " 241.2 288.2 265.  293.7 387.4 563.  560.9 447.7 569.6 555.8 307.2 693.7\n",
+       " 718.5 767.9 664.5 724.  651.2 692.  650.5 673.5 378.8 720.2 654.4 417.8\n",
+       " 546.  403.8 715.  517.1 581.9 669.2 629.5 672.7 640.5 653.5 655.6 655.1\n",
+       " 416.2 318.9 569.6 523.5 511.  485.5 314.1 265.8 153.8  93.  110.5 148.\n",
+       " 275.5 223.1  88.2  71.   58.8  31.8  32.8  12.9  21.3  23.9  20.4   0.\n",
+       "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
+       "      <td id=\"T_628f1_row0_col1\" class=\"data row0 col1\" >[106.9 130.3 140.2  98.7  85.  127.4 132.  115.3 130.3  89.4  84.3  90.9\n",
+       " 104.7  97.   97.2  95.3  81.6 107.3  82.  102.6 108.9  81.2 108.   83.7\n",
+       " 149.4 172.7 181.9 202.5 259.5 330.1 375.8 365.2 307.7 442.7 299.7 239.9\n",
+       " 287.7 367.2 305.9 256.  322.4 399.1 276.6 258.9 281.1 266.7 306.2 289.1\n",
+       " 296.5 346.8 235.7 236.3 240.1 228.2 277.4 251.5 274.8 291.5 325.6 363.3\n",
+       " 317.  331.7 293.  346.5 385.5 384.1 351.7 395.3 596.6 443.5 585.6 561.8\n",
+       " 491.7 616.5 562.3 438.4 432.3 563.6 628.8 448.1 581.8 531.6 551.6 433.3\n",
+       " 701.6 635.7 580.8 544.6 561.5 656.2 408.2 414.3 387.8 353.7 311.2 230.4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_628f1_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_628f1_row1_col0\" class=\"data row1 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "   0.    0.    0.   14.4  20.4  29.8  25.9  42.   56.7  60.7 114.2 133.5\n",
+       " 253.6 288.2 265.  293.7 387.4 519.1 560.9 457.3 532.3 532.6 269.8 723.3\n",
+       " 718.5 767.9 664.5 637.1 651.2 655.9 657.4 770.6 378.8 698.6 654.4 417.8\n",
+       " 546.  403.8 647.2 517.1 581.9 669.2 629.5 672.7 640.5 639.1 659.8 642.2\n",
+       " 416.2 318.9 569.6 509.2 491.1 461.  314.1 246.7 151.2 102.4 110.5 148.\n",
+       " 275.5 233.9  88.2  71.   64.1  31.8  31.6  12.9  25.3  20.   20.4   0.\n",
+       "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
+       "      <td id=\"T_628f1_row1_col1\" class=\"data row1 col1\" >[106.9 130.3 128.8  98.7  85.  126.2 109.2 144.6 130.3  92.9  84.3  96.9\n",
+       " 121.3  73.9 109.   95.3  90.1  95.8  82.  112.4 108.9 103.1 108.   96.5\n",
+       " 149.4 174.5 181.9 202.5 242.  330.1 375.8 399.2 428.6 325.8 256.3 334.8\n",
+       " 306.5 367.2 286.  264.8 322.4 399.1 276.6 258.9 281.1 337.4 329.7 289.1\n",
+       " 341.8 300.4 235.7 236.3 240.1 228.2 262.2 251.5 274.8 291.5 325.6 363.3\n",
+       " 397.9 331.7 305.6 346.5 385.5 458.4 351.7 395.3 456.4 443.5 553.9 561.8\n",
+       " 491.7 542.3 562.3 438.4 432.3 508.6 536.  448.1 435.7 538.2 436.5 433.3\n",
+       " 701.6 682.1 580.8 544.6 561.5 655.9 533.5 414.3 399.7 353.7 311.2 230.4]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7fcf5941c580>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Data exploration: look at the input data"
+    "# Data exploration: look at the input data\n",
+    "data = util.load_instances_data()\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c62d807-6da6-4d06-b71e-fdea0b7dcf32",
+   "metadata": {},
+   "source": [
+    "Since the objective of the two algorithms is to minimize the total energy cost, as input file we also have the grid electricity price at each our of the day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d6daadda-16fc-47f9-903a-e818d628217c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>42.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>39.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>38.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>37.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Time  Price\n",
+       "0     0  46.99\n",
+       "1     1  42.81\n",
+       "2     2  39.83\n",
+       "3     3  38.02\n",
+       "4     4  37.00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = util.load_prices_data()\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b734b0-04ac-4e50-9809-e4318128d34e",
+   "metadata": {},
+   "source": [
+    "Each algorithm was then run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]."
    ]
   },
   {
@@ -92,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tracking of the algorithms emissions"
+    "# Tracking of the algorithms emissions\n"
    ]
   }
  ],
