first test of emission tracker on anticipate

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -246,7 +246,7 @@
    "id": "48b734b0-04ac-4e50-9809-e4318128d34e",
    "metadata": {},
    "source": [
-    "Each algorithm was then run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]."
+    "Each algorithm was then run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]. Then, the training set of each algorithm will be of 3,000 records (100 runs x 30 instances)."
    ]
   },
   {
@@ -258,17 +258,84 @@
     "\n",
     "In order to extend HADA for taking into account sustainability, we need to measure the carbon emissions for running the algorithms during the benchmark phase. A simple tool to do so is [codecarbon](https://mlco2.github.io/codecarbon/index.html), which is a python package offering useful tools for tracking the emissions resulting from executing code execution.\n",
     "\n",
-    "The CO2e emission tracking tool offered by codecarbon can be used in [different modalities](https://mlco2.github.io/codecarbon/usage.html): as an Explicit Object, as a Context Manager (recommended for monitoring a specific code block) or as a Decorator (recommended for monitoring training functions). To monitor the emissions for the execution of the ANTICIPATE and CONTINGENCY algorithms over a single instance, i created an explicit `EmissionTracker` and used the `start()` and `stop()` functions to respectively start and stop the tracking of the code section"
+    "The CO2e emission tracking tool offered by codecarbon can be used in [different modalities](https://mlco2.github.io/codecarbon/usage.html): as an Explicit Object (instantiating a EmissionsTracker object and pass it as a parameter to function calls to start and stop the emissions tracking of the compute section), as a Context Manager (recommended for monitoring a specific code block) or as a Decorator (recommended for monitoring training functions). For example, let's track the emissions of running the ANTICIPATE algorithm. Let's say we would like to solve instance 5 with 4 scenarios:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "76ca68ef-3fb4-4cb1-971b-08ca46795d73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon INFO @ 09:10:52] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 09:10:52] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 09:10:52] No GPU found.\n",
+      "[codecarbon INFO @ 09:10:52] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 09:10:52] No CPU tracking mode found. Falling back on CPU constant mode.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started online ant\n",
+      "anticipate-ins-5-ns-4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon WARNING @ 09:10:53] We saw that you have a Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 09:10:53] CPU Model on constant consumption mode: Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz\n",
+      "[codecarbon INFO @ 09:10:53] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 09:10:53]   Platform system: Linux-6.10.4-linuxkit-x86_64-with-glibc2.31\n",
+      "[codecarbon INFO @ 09:10:53]   Python version: 3.9.20\n",
+      "[codecarbon INFO @ 09:10:53]   CodeCarbon version: 2.3.2\n",
+      "[codecarbon INFO @ 09:10:53]   Available RAM : 3.822 GB\n",
+      "[codecarbon INFO @ 09:10:53]   CPU count: 8\n",
+      "[codecarbon INFO @ 09:10:53]   CPU model: Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz\n",
+      "[codecarbon INFO @ 09:10:53]   GPU count: None\n",
+      "[codecarbon INFO @ 09:10:53]   GPU model: None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start emission tracker\n",
+      "Restricted license - for non-production use only - expires 2024-10-28\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Model solving failed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Tracking of the algorithms emissions\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43monline_ant\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscenarios\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minstance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfile\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mInstancesTest.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/app/notebooks/util/util.py:375\u001b[0m, in \u001b[0;36monline_ant\u001b[0;34m(scenarios, instance, file)\u001b[0m\n\u001b[1;32m    372\u001b[0m     logging\u001b[38;5;241m.\u001b[39merror(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to set objective: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    374\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m solve():\n\u001b[0;32m--> 375\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel solving failed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    377\u001b[0m t \u001b[38;5;241m=\u001b[39m mod\u001b[38;5;241m.\u001b[39mRuntime \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m60\u001b[39m\n\u001b[1;32m    378\u001b[0m runList\u001b[38;5;241m.\u001b[39mappend(t)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Model solving failed"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[codecarbon INFO @ 09:11:12] Energy consumed for RAM : 0.000006 kWh. RAM Power : 1.4332523345947266 W\n",
+      "[codecarbon INFO @ 09:11:12] Energy consumed for all CPUs : 0.000177 kWh. Total CPU Power : 42.5 W\n",
+      "[codecarbon INFO @ 09:11:12] 0.000183 kWh of electricity used since the beginning.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tracking of the algorithms emissions\n"
+    "# Tracking of the algorithms emissions\n",
+    "util.online_ant(scenarios=4, instance=5, file='InstancesTest.csv')"
    ]
   }
  ],
