--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4bd2dc3d-98f9-4c62-861e-e278f6d1e37a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================\n",
     "# Notebook setup: run this before everything\n",
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a6f2df48-e64c-463c-868c-be035158ad22",
    "metadata": {},
    "outputs": [
@@ -86,22 +77,22 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_048ff_row0_col0, #T_048ff_row0_col1, #T_048ff_row1_col0, #T_048ff_row1_col1 {\n",
+       "#T_bcef9_row0_col0, #T_bcef9_row0_col1, #T_bcef9_row1_col0, #T_bcef9_row1_col1 {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_048ff\">\n",
+       "<table id=\"T_bcef9\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_048ff_level0_col0\" class=\"col_heading level0 col0\" >PV(kW)</th>\n",
-       "      <th id=\"T_048ff_level0_col1\" class=\"col_heading level0 col1\" >Load(kW)</th>\n",
+       "      <th id=\"T_bcef9_level0_col0\" class=\"col_heading level0 col0\" >PV(kW)</th>\n",
+       "      <th id=\"T_bcef9_level0_col1\" class=\"col_heading level0 col1\" >Load(kW)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_048ff_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_048ff_row0_col0\" class=\"data row0 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "      <th id=\"T_bcef9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_bcef9_row0_col0\" class=\"data row0 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
        "   0.    0.    0.   10.4  20.4  29.8  25.9  37.6  54.9  58.6 114.2 122.2\n",
        " 241.2 288.2 265.  293.7 387.4 563.  560.9 447.7 569.6 555.8 307.2 693.7\n",
        " 718.5 767.9 664.5 724.  651.2 692.  650.5 673.5 378.8 720.2 654.4 417.8\n",
@@ -109,7 +100,7 @@
        " 416.2 318.9 569.6 523.5 511.  485.5 314.1 265.8 153.8  93.  110.5 148.\n",
        " 275.5 223.1  88.2  71.   58.8  31.8  32.8  12.9  21.3  23.9  20.4   0.\n",
        "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
-       "      <td id=\"T_048ff_row0_col1\" class=\"data row0 col1\" >[106.9 130.3 140.2  98.7  85.  127.4 132.  115.3 130.3  89.4  84.3  90.9\n",
+       "      <td id=\"T_bcef9_row0_col1\" class=\"data row0 col1\" >[106.9 130.3 140.2  98.7  85.  127.4 132.  115.3 130.3  89.4  84.3  90.9\n",
        " 104.7  97.   97.2  95.3  81.6 107.3  82.  102.6 108.9  81.2 108.   83.7\n",
        " 149.4 172.7 181.9 202.5 259.5 330.1 375.8 365.2 307.7 442.7 299.7 239.9\n",
        " 287.7 367.2 305.9 256.  322.4 399.1 276.6 258.9 281.1 266.7 306.2 289.1\n",
@@ -119,8 +110,8 @@
        " 701.6 635.7 580.8 544.6 561.5 656.2 408.2 414.3 387.8 353.7 311.2 230.4]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_048ff_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_048ff_row1_col0\" class=\"data row1 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "      <th id=\"T_bcef9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_bcef9_row1_col0\" class=\"data row1 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
        "   0.    0.    0.   14.4  20.4  29.8  25.9  42.   56.7  60.7 114.2 133.5\n",
        " 253.6 288.2 265.  293.7 387.4 519.1 560.9 457.3 532.3 532.6 269.8 723.3\n",
        " 718.5 767.9 664.5 637.1 651.2 655.9 657.4 770.6 378.8 698.6 654.4 417.8\n",
@@ -128,7 +119,7 @@
        " 416.2 318.9 569.6 509.2 491.1 461.  314.1 246.7 151.2 102.4 110.5 148.\n",
        " 275.5 233.9  88.2  71.   64.1  31.8  31.6  12.9  25.3  20.   20.4   0.\n",
        "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
-       "      <td id=\"T_048ff_row1_col1\" class=\"data row1 col1\" >[106.9 130.3 128.8  98.7  85.  126.2 109.2 144.6 130.3  92.9  84.3  96.9\n",
+       "      <td id=\"T_bcef9_row1_col1\" class=\"data row1 col1\" >[106.9 130.3 128.8  98.7  85.  126.2 109.2 144.6 130.3  92.9  84.3  96.9\n",
        " 121.3  73.9 109.   95.3  90.1  95.8  82.  112.4 108.9 103.1 108.   96.5\n",
        " 149.4 174.5 181.9 202.5 242.  330.1 375.8 399.2 428.6 325.8 256.3 334.8\n",
        " 306.5 367.2 286.  264.8 322.4 399.1 276.6 258.9 281.1 337.4 329.7 289.1\n",
@@ -141,7 +132,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f2b4c0b5820>"
+       "<pandas.io.formats.style.Styler at 0x7f1645d5e7c0>"
       ]
      },
      "metadata": {},
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d6daadda-16fc-47f9-903a-e818d628217c",
    "metadata": {},
    "outputs": [
@@ -263,42 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "76ca68ef-3fb4-4cb1-971b-08ca46795d73",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[codecarbon INFO @ 17:25:09] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 17:25:09] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 17:25:09] No GPU found.\n",
-      "[codecarbon INFO @ 17:25:09] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 17:25:09] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 17:25:11] We saw that you have a Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 17:25:11] CPU Model on constant consumption mode: Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz\n",
-      "[codecarbon INFO @ 17:25:11] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 17:25:11]   Platform system: Linux-6.10.4-linuxkit-x86_64-with-glibc2.31\n",
-      "[codecarbon INFO @ 17:25:11]   Python version: 3.9.20\n",
-      "[codecarbon INFO @ 17:25:11]   CodeCarbon version: 2.3.2\n",
-      "[codecarbon INFO @ 17:25:11]   Available RAM : 3.822 GB\n",
-      "[codecarbon INFO @ 17:25:11]   CPU count: 8\n",
-      "[codecarbon INFO @ 17:25:11]   CPU model: Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz\n",
-      "[codecarbon INFO @ 17:25:11]   GPU count: None\n",
-      "[codecarbon INFO @ 17:25:11]   GPU model: None\n",
-      "[codecarbon INFO @ 17:25:27] Energy consumed for RAM : 0.000005 kWh. RAM Power : 1.433250904083252 W\n",
-      "[codecarbon INFO @ 17:25:27] Energy consumed for all CPUs : 0.000149 kWh. Total CPU Power : 42.5 W\n",
-      "[codecarbon INFO @ 17:25:27] 0.000154 kWh of electricity used since the beginning.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Set parameter WLSAccessID\n",
+      "Set parameter WLSSecret\n",
+      "Set parameter LicenseID to value 2512647\n",
+      "Academic license 2512647 - for non-commercial use only - registered to en___@studio.unibo.it\n",
       "The solution cost (in keuro) is: 370.29\n",
-      "The runtime (in sec) is: 8.56\n",
-      "Avg memory used (in MB) is: 139.52\n"
+      "The runtime (in sec) is: 12.59\n",
+      "Avg memory used (in MB) is: 139.02\n"
      ]
     }
    ],
