--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -77,22 +77,22 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_bcef9_row0_col0, #T_bcef9_row0_col1, #T_bcef9_row1_col0, #T_bcef9_row1_col1 {\n",
+       "#T_5091a_row0_col0, #T_5091a_row0_col1, #T_5091a_row1_col0, #T_5091a_row1_col1 {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_bcef9\">\n",
+       "<table id=\"T_5091a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_bcef9_level0_col0\" class=\"col_heading level0 col0\" >PV(kW)</th>\n",
-       "      <th id=\"T_bcef9_level0_col1\" class=\"col_heading level0 col1\" >Load(kW)</th>\n",
+       "      <th id=\"T_5091a_level0_col0\" class=\"col_heading level0 col0\" >PV(kW)</th>\n",
+       "      <th id=\"T_5091a_level0_col1\" class=\"col_heading level0 col1\" >Load(kW)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_bcef9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_bcef9_row0_col0\" class=\"data row0 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "      <th id=\"T_5091a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_5091a_row0_col0\" class=\"data row0 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
        "   0.    0.    0.   10.4  20.4  29.8  25.9  37.6  54.9  58.6 114.2 122.2\n",
        " 241.2 288.2 265.  293.7 387.4 563.  560.9 447.7 569.6 555.8 307.2 693.7\n",
        " 718.5 767.9 664.5 724.  651.2 692.  650.5 673.5 378.8 720.2 654.4 417.8\n",
@@ -100,7 +100,7 @@
        " 416.2 318.9 569.6 523.5 511.  485.5 314.1 265.8 153.8  93.  110.5 148.\n",
        " 275.5 223.1  88.2  71.   58.8  31.8  32.8  12.9  21.3  23.9  20.4   0.\n",
        "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
-       "      <td id=\"T_bcef9_row0_col1\" class=\"data row0 col1\" >[106.9 130.3 140.2  98.7  85.  127.4 132.  115.3 130.3  89.4  84.3  90.9\n",
+       "      <td id=\"T_5091a_row0_col1\" class=\"data row0 col1\" >[106.9 130.3 140.2  98.7  85.  127.4 132.  115.3 130.3  89.4  84.3  90.9\n",
        " 104.7  97.   97.2  95.3  81.6 107.3  82.  102.6 108.9  81.2 108.   83.7\n",
        " 149.4 172.7 181.9 202.5 259.5 330.1 375.8 365.2 307.7 442.7 299.7 239.9\n",
        " 287.7 367.2 305.9 256.  322.4 399.1 276.6 258.9 281.1 266.7 306.2 289.1\n",
@@ -110,8 +110,8 @@
        " 701.6 635.7 580.8 544.6 561.5 656.2 408.2 414.3 387.8 353.7 311.2 230.4]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_bcef9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_bcef9_row1_col0\" class=\"data row1 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+       "      <th id=\"T_5091a_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_5091a_row1_col0\" class=\"data row1 col0\" >[  0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
        "   0.    0.    0.   14.4  20.4  29.8  25.9  42.   56.7  60.7 114.2 133.5\n",
        " 253.6 288.2 265.  293.7 387.4 519.1 560.9 457.3 532.3 532.6 269.8 723.3\n",
        " 718.5 767.9 664.5 637.1 651.2 655.9 657.4 770.6 378.8 698.6 654.4 417.8\n",
@@ -119,7 +119,7 @@
        " 416.2 318.9 569.6 509.2 491.1 461.  314.1 246.7 151.2 102.4 110.5 148.\n",
        " 275.5 233.9  88.2  71.   64.1  31.8  31.6  12.9  25.3  20.   20.4   0.\n",
        "   0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0. ]</td>\n",
-       "      <td id=\"T_bcef9_row1_col1\" class=\"data row1 col1\" >[106.9 130.3 128.8  98.7  85.  126.2 109.2 144.6 130.3  92.9  84.3  96.9\n",
+       "      <td id=\"T_5091a_row1_col1\" class=\"data row1 col1\" >[106.9 130.3 128.8  98.7  85.  126.2 109.2 144.6 130.3  92.9  84.3  96.9\n",
        " 121.3  73.9 109.   95.3  90.1  95.8  82.  112.4 108.9 103.1 108.   96.5\n",
        " 149.4 174.5 181.9 202.5 242.  330.1 375.8 399.2 428.6 325.8 256.3 334.8\n",
        " 306.5 367.2 286.  264.8 322.4 399.1 276.6 258.9 281.1 337.4 329.7 289.1\n",
@@ -132,7 +132,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f1645d5e7c0>"
+       "<pandas.io.formats.style.Styler at 0x7fa630103ee0>"
       ]
      },
      "metadata": {},
@@ -267,14 +267,18 @@
       "Set parameter LicenseID to value 2512647\n",
       "Academic license 2512647 - for non-commercial use only - registered to en___@studio.unibo.it\n",
       "The solution cost (in keuro) is: 370.29\n",
-      "The runtime (in sec) is: 12.59\n",
-      "Avg memory used (in MB) is: 139.02\n"
+      "The runtime (in sec) is: 5.75\n",
+      "Avg memory used (in MB) is: 5.75\n"
      ]
     }
    ],
    "source": [
     "# Tracking of the algorithms emissions\n",
-    "util.online_ant(scenarios=4, instance=5, file='InstancesTest.csv')"
+    "sol_cost, run_final, mem_final = util.online_ant(scenarios=4, instance=5, file='InstancesTest.csv')\n",
+    "\n",
+    "print(f\"The solution cost (in keuro) is: {sol_cost:.2f}\")\n",
+    "print(f\"The runtime (in sec) is: {run_final:.2f}\")\n",
+    "print(f\"Avg memory used (in MB) is: {mem_final:.2f}\")"
    ]
   }
  ],
