moved emission tracker outside of the online_ant function

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "4bd2dc3d-98f9-4c62-861e-e278f6d1e37a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# Notebook setup: run this before everything\n",
@@ -30,7 +39,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "#from skopt.space import Space\n",
-    "#from eml.net.reader import keras_reader"
+    "#from eml.net.reader import keras_reader\n",
+    "from codecarbon import track_emissions"
    ]
   },
   {
@@ -254,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "76ca68ef-3fb4-4cb1-971b-08ca46795d73",
    "metadata": {},
    "outputs": [
@@ -262,23 +272,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter WLSAccessID\n",
-      "Set parameter WLSSecret\n",
-      "Set parameter LicenseID to value 2512647\n",
-      "Academic license 2512647 - for non-commercial use only - registered to en___@studio.unibo.it\n",
       "The solution cost (in keuro) is: 370.29\n",
-      "The runtime (in sec) is: 5.75\n",
-      "Avg memory used (in MB) is: 5.75\n"
+      "The runtime (in sec) is: 5.64\n",
+      "Avg memory used (in MB) is: 144.84\n"
      ]
     }
    ],
    "source": [
-    "# Tracking of the algorithms emissions\n",
-    "sol_cost, run_final, mem_final = util.online_ant(scenarios=4, instance=5, file='InstancesTest.csv')\n",
+    "scenarios = 4\n",
+    "instance = 5\n",
+    "project_name = f\"anticipate-ins-{instance}-ns-{scenarios}\"\n",
+    "output_dir='../data/'\n",
+    "\n",
+    "# Codecarbon emission tracker\n",
+    "tracker = EmissionsTracker(project_name=project_name, \n",
+    "                           log_level='ERROR', \n",
+    "                           output_dir=output_dir)\n",
+    "\n",
+    "with tracker as t:\n",
+    "    sol_cost, run_final, mem_final = util.online_ant(scenarios=scenarios, instance=instance, file='InstancesTest.csv')\n",
     "\n",
     "print(f\"The solution cost (in keuro) is: {sol_cost:.2f}\")\n",
     "print(f\"The runtime (in sec) is: {run_final:.2f}\")\n",
     "print(f\"Avg memory used (in MB) is: {mem_final:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11cb8ab5-e1a3-44d3-ba2b-0e659f5740b2",
+   "metadata": {},
+   "source": [
+    "This tracks the emissions of the `online_ant` function by using the codecarbon `EmissionTracker` as a context manager. "
    ]
   }
  ],
