--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "### Input data\n",
     "\n",
-    "The input data is a set of 30 different instance realisations, each one representing one daily time horizon. For each day, we have **Load**, which is a 96-valued vector of the load observations sampled at each interval (every 15 minutes over the course of a day), and **PV**, a 96-valued vector representing the observations of available Photovoltaic energy production. Here we can see an example of the first two instances:"
+    "The input data is a set of 30 different instance realisations, each one representing one daily time horizon. For each day, we have **Load**, which is a 96-valued vector of the load observations sampled at each interval (every 15 minutes over the course of a day), and **PV**, a 96-valued vector representing the observations of available Photovoltaic energy production. Here we can see an example of the first two instances (**NOTE** align column names to the left):"
    ]
   },
   {
@@ -302,8 +302,135 @@
    "id": "11cb8ab5-e1a3-44d3-ba2b-0e659f5740b2",
    "metadata": {},
    "source": [
-    "This tracks the emissions of the `online_ant` function by using the codecarbon `EmissionTracker` as a context manager. "
+    "This tracks the emissions of the `online_ant` function by using the codecarbon `EmissionTracker` as a context manager. By default, codecarbon saves the tracking data to a .csv file, named `emissions.csv`. Let's take a look"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5964c5bf-a1fe-4ddd-bf29-7dee92a522a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>project_name</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>emissions</th>\n",
+       "      <th>emissions_rate</th>\n",
+       "      <th>cpu_power</th>\n",
+       "      <th>ram_power</th>\n",
+       "      <th>cpu_energy</th>\n",
+       "      <th>ram_energy</th>\n",
+       "      <th>energy_consumed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>region</th>\n",
+       "      <th>os</th>\n",
+       "      <th>python_version</th>\n",
+       "      <th>codecarbon_version</th>\n",
+       "      <th>cpu_count</th>\n",
+       "      <th>cpu_model</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>ram_total_size</th>\n",
+       "      <th>tracking_mode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-10-29T08:17:11</td>\n",
+       "      <td>anticipate-ins-5-ns-4</td>\n",
+       "      <td>8.991218</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>42.5</td>\n",
+       "      <td>1.433251</td>\n",
+       "      <td>0.000106</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.00011</td>\n",
+       "      <td>...</td>\n",
+       "      <td>emilia-romagna</td>\n",
+       "      <td>Linux-6.10.4-linuxkit-x86_64-with-glibc2.31</td>\n",
+       "      <td>3.9.20</td>\n",
+       "      <td>2.3.2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz</td>\n",
+       "      <td>12.047</td>\n",
+       "      <td>44.2251</td>\n",
+       "      <td>3.822002</td>\n",
+       "      <td>machine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             timestamp           project_name  duration  emissions  \\\n",
+       "0  2024-10-29T08:17:11  anticipate-ins-5-ns-4  8.991218   0.000037   \n",
+       "\n",
+       "   emissions_rate  cpu_power  ram_power  cpu_energy  ram_energy  \\\n",
+       "0        0.000004       42.5   1.433251    0.000106    0.000004   \n",
+       "\n",
+       "   energy_consumed  ...          region  \\\n",
+       "0          0.00011  ...  emilia-romagna   \n",
+       "\n",
+       "                                            os python_version  \\\n",
+       "0  Linux-6.10.4-linuxkit-x86_64-with-glibc2.31         3.9.20   \n",
+       "\n",
+       "  codecarbon_version cpu_count                                 cpu_model  \\\n",
+       "0              2.3.2         8  Intel(R) Core(TM) i5-8257U CPU @ 1.40GHz   \n",
+       "\n",
+       "   longitude latitude  ram_total_size  tracking_mode  \n",
+       "0     12.047  44.2251        3.822002        machine  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "emissions = util.load_emissions_data()\n",
+    "display(emissions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7b1ba2c-07e6-4534-8a9c-b9b7c13a00d4",
+   "metadata": {},
+   "source": [
+    "(**NOTE:** maybe a table is not the most suitable representation) As we can see, keeps track of the total emissions of CO2eq (kg), the emission rate (kg/s), and the energy consumed, as well as many other aspects, related to the type of hardware and the location where the computation took place."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a73f44ad-78a4-4132-a3a4-6aa9f5526c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
