added mbp19 datasets

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -244,14 +244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b734b0-04ac-4e50-9809-e4318128d34e",
-   "metadata": {},
-   "source": [
-    "Each algorithm was then run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]. Then, the training set of each algorithm will be of 3,000 records (100 runs x 30 instances)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b302f4f4-0472-48c8-b1b4-1c3e96faaecd",
    "metadata": {},
    "source": [
@@ -422,6 +414,26 @@
    "metadata": {},
    "source": [
     "(**NOTE:** maybe a table is not the most suitable representation) As we can see, keeps track of the total emissions of CO2eq (kg), the emission rate (kg/s), and the energy consumed, as well as many other aspects, related to the type of hardware and the location where the computation took place."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16eba50b-dc1f-4a7f-8f89-27ebbb258fa9",
+   "metadata": {},
+   "source": [
+    "**NOTE** Insert the metrics collected during the benchmarking phase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b734b0-04ac-4e50-9809-e4318128d34e",
+   "metadata": {},
+   "source": [
+    "### Benchmarking\n",
+    "\n",
+    "For the benchmarking phase, the ANTICIPATE and CONTINGECY algorithms were run on each instance 100 times, each time considering a different number of the configurable parameter (from 1 to 100 traces/scenarios). This value is taken directly from the HADA paper, according to which running the algorithms on each instance 100 times sufficiently explores the parameter space [Hada paper, 4]. Then, the training set of each algorithm will be of 3,000 records (100 runs x 30 instances). \n",
+    "\n",
+    "Since for the HADA approach is recommended to collect data relative to different Hardware configurations, i executed the benchmarking phase on my personal laptop [Insert specifications], and on [Leonardo](https://leonardo-supercomputer.cineca.eu/), an HPC System hosted by CINECA."
    ]
   },
   {
