updated data from contingency benchmark

--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -778,6 +778,60 @@
     "\n",
     "Now it's time to train a Machine Learning model on the dataset obtained in the benchmark phase, in order to obtain our surrogate model."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a01e60-f889-44e1-8e28-a89c90d71d64",
+   "metadata": {},
+   "source": [
+    "Function to run training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cb3425-5bb7-455f-b3b3-bb8ad9281674",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def __run_training(self, algorithm, hw, target, dataset):\n",
+    "    \"\"\"\n",
+    "    Trains a Decision Tree and stores it with pickle.\n",
+    "\n",
+    "    Args:\n",
+    "        algorithm (str): algorithm id.\n",
+    "        hw (str): hardware platform id.\n",
+    "        target (str): target id.\n",
+    "        dataset (pd.DataFrame): training dataset.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    # s = time.time()\n",
+    "    model_path = self.__get_model_path(algorithm, hw, target)\n",
+    "\n",
+    "    # filtering dataset for the specific hyperparams and target\n",
+    "    hyperparams = self.db.get_hyperparams(algorithm)\n",
+    "    X = dataset[hyperparams].values  # Algorithm hyperparameters are our input values\n",
+    "    y = dataset[[target]].values\n",
+    "\n",
+    "    # training the DT\n",
+    "    dt = DecisionTreeRegressor(max_depth=10, random_state=42)\n",
+    "    dt.fit(X, y)\n",
+    "\n",
+    "    # storing the DT\n",
+    "    pickle.dump(dt, open(model_path, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a67afc-3957-4863-850f-4bd3c4c0dc0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for target in targets:\n",
+    "    for hw in hws:\n",
+    "        # run training (algorithm, hw, target, dataset):"
+   ]
   }
  ],
  "metadata": {
